# homepage

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  TODO.md  homepage.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  start-dev.sh
.github/workflows/: docker-publish.yml  env-docker-publish.yml  homepage-arc-runner-set.yaml  homepage-runner.yaml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/.github/scripts/: set-version.sh
backend/.github/workflows/: ci-build.yml  deploy.yml  security.yml
backend/crates/grpc-api/: Cargo.toml  build.rs
backend/dockerbuild/: .zshrc  Dockerfile  build-image.sh
backend/docs/: DEVELOPMENT.md  architecture.md
backend/k8s/: Dockerfile
backend/k8s/base/: deployment.yaml  httproute.yaml  kustomization.yaml  namespace.yaml  service.yaml
backend/scripts/: build.sh  monitoring.sh  rollback.sh  test-grpc.sh
crates/grpc-api/: Cargo.toml  build.rs
crates/grpc-api/examples/: client_test.rs  test.rs
crates/grpc-api/proto/: api.proto  cvad.proto
crates/grpc-api/src/: cvad_service.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: cvad_restapi.rs  lib.rs
crates/web-server/: Cargo.toml  api_service.rs
crates/web-server/src/: main.rs
crates/web-server/src/handlers/: mod.rs  remain_days.rs
dockerbuild/: .zshrc  Dockerfile
frontend/: package-lock.json
k8s/: Dockerfile  Runner_ScaleSet.yaml  arc_role.yaml  build_docker_buildkit.sh
(+8 files in other folders)
