[package]
name = "grpc-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "grpc_api"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
chrono.workspace = true

prost = "0.14.1"
thiserror = "2.0.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-web = "0.14.2"
tower = "0.5.2"
tracing = "0.1.41"
shared = { path = "../shared" }
ratatui = "0.29.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
