[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
chrono.workspace = true

anyhow = "1.0.100"
axum = "0.8.6"
grpc-api = { path = "../grpc-api" }
shared = { path = "../shared" }

tonic = { version = "0.14.2", features = ["transport"] }
tower = "0.5.2"
serde = "1.0.228"

serde_json = "1.0.145"
tower-http = { version = "0.6.8", features = ["full"] }